--- a/source/TreeLib/TreeLib.csproj
+++ b/source/TreeLib/TreeLib.csproj
@@ -1,9 +1,7 @@
 <Project Sdk="Microsoft.NET.Sdk">
-
   <PropertyGroup>
     <GeneratePackageOnBuild>false</GeneratePackageOnBuild>
-    
-    <TargetFramework>netstandard2.0</TargetFramework>
+    <TargetFramework>net8.0</TargetFramework>
     <PackageId>Dirkster.TreeLib</PackageId>
     <PackageVersion>1.0.0</PackageVersion>
     <Authors>Dirk Bahle</Authors>
@@ -17,15 +15,11 @@ This library contains Generic algorithm implementations for tree traversals, suc
     <FileVersion>1.2.0.0</FileVersion>
     <Version>1.2.0</Version>
   </PropertyGroup>
-
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
     <DocumentationFile>bin\Debug\netstandard1.4\TreeLib.xml</DocumentationFile>
   </PropertyGroup>
-
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
     <DocumentationFile>bin\Release\netstandard1.4\TreeLib.xml</DocumentationFile>
   </PropertyGroup>
-
   <Import Project="..\Shared\Shared.projitems" Label="Shared" />
-
 </Project>
